libs/slim/test/typecheck/fail/initializer_mismatch.shader
shader vertex {
    bool foo = 2;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
